Fixed blocks size on mobile

--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ section>div {
 	align-items: center;
 
 	width: 360px;
+	max-width: 80%;
 	height: 100px;
 	padding: 20px;
 
